--- a/index.html
+++ b/index.html
@@ -154,6 +154,57 @@
             font-weight: bold;
         }
 
+        /* Keep header centered */
+        header .section-label {
+            text-align: center;
+        }
+
+        /* Album section keeps image centered but text left */
+        .album-header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        .album-header img {
+            max-width: 350px;
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+            border: 3px solid rgba(101, 67, 33, 0.6);
+        }
+
+        .album-buttons {
+            display: flex;
+            gap: 15px;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        /* Members section keeps center alignment */
+        #members .section-label,
+        #members h2 {
+            text-align: center;
+        }
+
+        /* Contact section keeps center alignment */
+        #contact .section-label,
+        #contact h2 {
+            text-align: center;
+        }
+
+        /* Updates section */
+        #updates .section-label,
+        #updates h2 {
+            text-align: center;
+        }
+
+        #updates p {
+            text-align: center;
+        }
+
         @media (max-width: 768px) {
             .logo {
                 font-size: 1.8rem;
@@ -213,32 +264,34 @@
     </header>
 
     <section id="album">
-        <div class="section-label">PRIMARY ARTIFACT COLLECTION #1</div>
         <div class="album-section">
-            <h2>Catalogued Materials</h2>
-            <div style="display: flex; flex-direction: column; align-items: center; gap: 30px; margin-bottom: 30px;">
-                <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
-                <div style="text-align: center;">
-                    <div class="album-title">The Boney Files</div>
-                    <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
+            <div class="album-header">
+                <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover">
+            </div>
+            <div class="content-column">
+                <div class="section-label">[REC_001] Primary Artifact Collection</div>
+                <h2>The Boney Files</h2>
+                <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
+                <div class="artifact-note">
+                    <strong>Field Notes:</strong> This collection comprises the primary audio documentation from the Subject Group's initial creative period during the early-mid 21st century. Compositional analysis indicates progressive refinement across a multi-year development period. Thematic elements include parallel dimensions, domestic observations, and bovine imagery.
                 </div>
-            </div>
-            <div class="artifact-note">
-                <strong>Field Notes:</strong> This collection comprises the primary audio documentation from the Subject Group's initial creative period during the early-mid 21st century. Compositional analysis indicates progressive refinement across a multi-year development period. Thematic elements include parallel dimensions, domestic observations, and bovine imagery.
-            </div>
-            <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8; margin-bottom: 30px;">
-                Ten audio artifacts spanning multiple genres and production approaches. Notable characteristics include embedded musical references, layered arrangements, and integration of comedic elements within progressive rock structures. Repeated listening recommended for comprehensive analysis.
-            </p>
-            <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="boney-files.html" class="cta-button">Complete Artifact Analysis</a>
-                <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Access Audio Files</a>
-                <a href="videos.html" class="cta-button">View Visual Documentation</a>
+                <p class="body-text">
+                    Ten audio artifacts spanning multiple genres and production approaches. Notable characteristics include embedded musical references, layered arrangements, and integration of comedic elements within progressive rock structures. Repeated listening recommended for comprehensive analysis.
+                </p>
+                <div class="album-buttons">
+                    <a href="boney-files.html" class="cta-button">Complete Artifact Analysis</a>
+                    <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Access Audio Files</a>
+                    <a href="videos.html" class="cta-button">View Visual Documentation</a>
+                </div>
+                <div class="data-tag">
+                    RECORD_ID: TME-BF-001 | CLASSIFICATION: UNRESTRICTED | LAST_UPDATED: 3147.03.08
+                </div>
             </div>
         </div>
     </section>
 
     <section id="members">
-        <div class="section-label">SUBJECT IDENTIFICATIONS - CORE GROUP</div>
+        <div class="section-label">[PERSONNEL] Subject Identifications - Core Group</div>
         <h2>Personnel Records</h2>
         <div class="members">
             <a href="stephen-murphy.html" class="member-card">
@@ -259,7 +312,7 @@
             </a>
         </div>
         
-        <div class="section-label" style="margin-top: 60px;">SUPPLEMENTARY PERSONNEL</div>
+        <div class="section-label" style="margin-top: 60px;">[PERSONNEL] Supplementary Contributors</div>
         <h2 style="margin-top: 20px;">Guest Collaborators</h2>
         <div class="members">
             <div class="member-card" style="cursor: default;">
@@ -283,9 +336,9 @@
 
     <section id="updates">
         <div class="breaking-news">
-            <div class="section-label" style="color: #8b0000; margin-bottom: 20px;">STATUS UPDATE</div>
-            <h2 style="color: #8b0000; margin-bottom: 20px;">Secondary Artifact Collection Identified</h2>
-            <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8; text-align: center; margin-bottom: 20px;">
+            <div class="section-label" style="color: #8b0000;">[ALERT] Status Update</div>
+            <h2 style="color: #8b0000; text-align: center;">Secondary Artifact Collection Identified</h2>
+            <p style="color: #1a1a1a; font-size: 1.05rem; line-height: 1.8; text-align: center; margin-bottom: 20px;">
                 Field teams have identified evidence of a second album, designated <strong>"SHAPES"</strong>, featuring integrated visual narrative components. Initial comic frame recovered and catalogued. Analysis in progress.
             </p>
             <div style="text-align: center;">
@@ -295,22 +348,22 @@
     </section>
 
     <section id="contact">
-        <div class="section-label">EXTERNAL DOCUMENTATION CHANNELS</div>
+        <div class="section-label">[EXT_LINK] External Documentation Channels</div>
         <h2>Reference Materials</h2>
         <div class="social-links">
             <a href="https://themurphyexperiment.bandcamp.com/" class="social-link" target="_blank">Bandcamp Archive</a>
             <a href="https://substack.com/@monsterplow" class="social-link" target="_blank">Substack Publication</a>
             <a href="mailto:themurphyexperiment@gmail.com" class="social-link">Direct Contact</a>
         </div>
-        <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.1rem; font-weight: bold;">
-            <p style="font-style: italic;">Support for independent archival work enables continued documentation and analysis of this ongoing phenomenon.</p>
+        <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.05rem;">
+            <p class="body-text" style="text-align: center; font-style: italic;">Support for independent archival work enables continued documentation and analysis of this ongoing phenomenon.</p>
         </div>
     </section>
 
     <footer>
         <p>&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
-        <p style="margin-top: 15px; font-size: 0.85rem; color: #5a3a1a;">Document ID: TME-1310-INDEX</p>
+        <p class="data-tag" style="text-align: center; margin-top: 15px; border-top: none; padding-top: 0;">Document ID: TME-1310-INDEX | SESSION: ACTIVE</p>
     </footer>
 
     <script>
