--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            background: rgba(245, 230, 211, 0.95);
+            border-bottom: 3px solid rgba(101, 67, 33, 0.6);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
         }
 
         header .archive-label {
