--- a/boney-files.html
+++ b/boney-files.html
@@ -9,10 +9,14 @@
     <style>
         /* Page-specific styles for boney-files.html */
         header {
-            padding: 60px 20px;
+            padding: 60px 20px 20px 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
+        }
+
+        #album {
+            padding-top: 40px;
         }
 
         header .archive-label {
