--- a/boney-files.html
+++ b/boney-files.html
@@ -22,6 +22,181 @@
                 align-items: center;
             }
         }
+
+        /* Audio player styles */
+        .track.playable {
+            cursor: pointer;
+        }
+
+        .track.playable:hover {
+            background: rgba(1, 66, 8, 0.15);
+        }
+
+        .track.playable.playing {
+            background: rgba(1, 66, 8, 0.2);
+            border-left: 3px solid #014208;
+        }
+
+        .play-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 28px;
+            height: 28px;
+            margin-right: 10px;
+            background: linear-gradient(180deg, #a0c4a0 0%, #60986a 100%);
+            border: none;
+            border-radius: 50%;
+            color: #014208;
+            font-size: 0.8rem;
+            cursor: pointer;
+            box-shadow: 0 2px 0 #3a6b3a;
+            transition: all 0.1s ease;
+        }
+
+        .play-btn:hover {
+            background: linear-gradient(180deg, #90b490 0%, #50885a 100%);
+            transform: translateY(1px);
+            box-shadow: 0 1px 0 #3a6b3a;
+        }
+
+        .play-btn.playing {
+            background: linear-gradient(180deg, #d4a0a0 0%, #b86060 100%);
+            color: #5a0000;
+            box-shadow: 0 2px 0 #8b3a3a;
+        }
+
+        .track-title-wrap {
+            display: flex;
+            align-items: center;
+            flex: 1;
+        }
+
+        /* Audio player bar */
+        .audio-player-bar {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(245, 230, 211, 0.98);
+            border-top: 3px solid rgba(101, 67, 33, 0.6);
+            padding: 15px 20px;
+            display: none;
+            align-items: center;
+            gap: 15px;
+            z-index: 1000;
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .audio-player-bar.active {
+            display: flex;
+        }
+
+        .player-info {
+            flex: 1;
+            min-width: 0;
+        }
+
+        .player-title {
+            font-family: 'Special Elite', cursive;
+            font-size: 1rem;
+            color: #3d2813;
+            font-weight: bold;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .player-controls {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .player-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            background: linear-gradient(180deg, #a0c4a0 0%, #60986a 100%);
+            border: none;
+            border-radius: 50%;
+            color: #014208;
+            font-size: 1.2rem;
+            cursor: pointer;
+            box-shadow: 0 3px 0 #3a6b3a;
+            transition: all 0.1s ease;
+        }
+
+        .player-btn:hover {
+            background: linear-gradient(180deg, #90b490 0%, #50885a 100%);
+            transform: translateY(1px);
+            box-shadow: 0 2px 0 #3a6b3a;
+        }
+
+        .player-progress {
+            flex: 2;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .progress-bar {
+            flex: 1;
+            height: 8px;
+            background: rgba(101, 67, 33, 0.3);
+            border-radius: 4px;
+            cursor: pointer;
+            overflow: hidden;
+        }
+
+        .progress-fill {
+            height: 100%;
+            background: linear-gradient(90deg, #014208 0%, #2a7a2a 100%);
+            width: 0%;
+            transition: width 0.1s linear;
+        }
+
+        .player-time {
+            font-family: 'IBM Plex Mono', monospace;
+            font-size: 0.8rem;
+            color: #5a3a1a;
+            min-width: 80px;
+            text-align: center;
+        }
+
+        .player-close {
+            background: none;
+            border: none;
+            color: #8b0000;
+            font-size: 1.5rem;
+            cursor: pointer;
+            padding: 5px;
+            opacity: 0.7;
+            transition: opacity 0.2s;
+        }
+
+        .player-close:hover {
+            opacity: 1;
+        }
+
+        @media (max-width: 768px) {
+            .audio-player-bar {
+                flex-wrap: wrap;
+                padding: 10px 15px;
+            }
+
+            .player-progress {
+                order: 3;
+                flex-basis: 100%;
+                margin-top: 10px;
+            }
+
+            .player-info {
+                flex: 1;
+            }
+        }
     </style>
 </head>
 <body>
@@ -139,9 +314,12 @@
         <div class="section-label mt-60">[REC_001.1] TRACK LISTING</div>
         <div class="tracklist">
             <h3 class="centered mb-20">Audio Index</h3>
-            <div class="track">
+            <div class="track playable" data-track="1" data-src="media/01 - The Search, What's in the Box.mp3" onclick="playTrack(this)">
                 <span class="track-number">1.</span>
-                <span class="track-title">The Search, What's in the Box?</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">The Search, What's in the Box?</span>
+                </span>
                 <span class="track-duration">1:08</span>
             </div>
             <div class="track">
@@ -215,6 +393,27 @@
         </div>
     </section>
 
+    <!-- Audio Player Bar -->
+    <div class="audio-player-bar" id="audioPlayerBar">
+        <div class="player-controls">
+            <button class="player-btn" id="playerPlayBtn" onclick="togglePlay()" aria-label="Play/Pause">▶</button>
+        </div>
+        <div class="player-info">
+            <div class="player-title" id="playerTitle">Track Title</div>
+        </div>
+        <div class="player-progress">
+            <span class="player-time" id="playerCurrentTime">0:00</span>
+            <div class="progress-bar" id="progressBar" onclick="seekAudio(event)">
+                <div class="progress-fill" id="progressFill"></div>
+            </div>
+            <span class="player-time" id="playerDuration">0:00</span>
+        </div>
+        <button class="player-close" onclick="closePlayer()" aria-label="Close player">&times;</button>
+    </div>
+
+    <!-- Hidden Audio Element -->
+    <audio id="audioPlayer" preload="metadata"></audio>
+
     <!-- Lightbox Modal -->
     <div id="albumLightbox" class="lightbox-modal" onclick="closeLightbox()">
         <div class="lightbox-content" onclick="event.stopPropagation()">
@@ -255,6 +454,7 @@
             });
         });
 
+        // Lightbox functions
         function openLightbox(cover) {
             const lightboxImage = document.getElementById('lightboxImage');
             if (cover === 'front') {
@@ -273,10 +473,123 @@
             document.body.style.overflow = 'auto';
         }
 
+        // Audio Player
+        const audio = document.getElementById('audioPlayer');
+        const playerBar = document.getElementById('audioPlayerBar');
+        const playerTitle = document.getElementById('playerTitle');
+        const playerPlayBtn = document.getElementById('playerPlayBtn');
+        const progressFill = document.getElementById('progressFill');
+        const playerCurrentTime = document.getElementById('playerCurrentTime');
+        const playerDuration = document.getElementById('playerDuration');
+        let currentTrackElement = null;
+
+        function playTrack(trackElement) {
+            const src = trackElement.dataset.src;
+            const title = trackElement.querySelector('.track-title').textContent;
+
+            // If clicking the same track that's playing, toggle play/pause
+            if (currentTrackElement === trackElement && !audio.paused) {
+                audio.pause();
+                return;
+            }
+
+            // Remove playing state from previous track
+            if (currentTrackElement) {
+                currentTrackElement.classList.remove('playing');
+                currentTrackElement.querySelector('.play-btn').textContent = '▶';
+            }
+
+            // Set new track
+            currentTrackElement = trackElement;
+            audio.src = src;
+            playerTitle.textContent = title;
+            playerBar.classList.add('active');
+
+            // Play
+            audio.play();
+        }
+
+        function togglePlay() {
+            if (audio.paused) {
+                audio.play();
+            } else {
+                audio.pause();
+            }
+        }
+
+        function closePlayer() {
+            audio.pause();
+            audio.src = '';
+            playerBar.classList.remove('active');
+            if (currentTrackElement) {
+                currentTrackElement.classList.remove('playing');
+                currentTrackElement.querySelector('.play-btn').textContent = '▶';
+                currentTrackElement = null;
+            }
+        }
+
+        function formatTime(seconds) {
+            const mins = Math.floor(seconds / 60);
+            const secs = Math.floor(seconds % 60);
+            return `${mins}:${secs.toString().padStart(2, '0')}`;
+        }
+
+        function seekAudio(event) {
+            const progressBar = document.getElementById('progressBar');
+            const rect = progressBar.getBoundingClientRect();
+            const percent = (event.clientX - rect.left) / rect.width;
+            audio.currentTime = percent * audio.duration;
+        }
+
+        // Audio event listeners
+        audio.addEventListener('play', () => {
+            playerPlayBtn.textContent = '⏸';
+            if (currentTrackElement) {
+                currentTrackElement.classList.add('playing');
+                currentTrackElement.querySelector('.play-btn').textContent = '⏸';
+                currentTrackElement.querySelector('.play-btn').classList.add('playing');
+            }
+        });
+
+        audio.addEventListener('pause', () => {
+            playerPlayBtn.textContent = '▶';
+            if (currentTrackElement) {
+                currentTrackElement.querySelector('.play-btn').textContent = '▶';
+                currentTrackElement.querySelector('.play-btn').classList.remove('playing');
+            }
+        });
+
+        audio.addEventListener('timeupdate', () => {
+            if (audio.duration) {
+                const percent = (audio.currentTime / audio.duration) * 100;
+                progressFill.style.width = percent + '%';
+                playerCurrentTime.textContent = formatTime(audio.currentTime);
+            }
+        });
+
+        audio.addEventListener('loadedmetadata', () => {
+            playerDuration.textContent = formatTime(audio.duration);
+        });
+
+        audio.addEventListener('ended', () => {
+            playerPlayBtn.textContent = '▶';
+            if (currentTrackElement) {
+                currentTrackElement.classList.remove('playing');
+                currentTrackElement.querySelector('.play-btn').textContent = '▶';
+                currentTrackElement.querySelector('.play-btn').classList.remove('playing');
+            }
+            progressFill.style.width = '0%';
+        });
+
         // Close on Escape key
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Escape') {
                 closeLightbox();
+            }
+            // Spacebar to toggle play (when not focused on input)
+            if (event.key === ' ' && event.target.tagName !== 'INPUT' && playerBar.classList.contains('active')) {
+                event.preventDefault();
+                togglePlay();
             }
         });
     </script>
